# movescriptions

./: .gitignore  Cargo.toml  README.md  README.zh.md  package.json
aptos/: README.md
examples/sui/dummy/: Move.toml
rooch/: Move.toml  README.md
rooch/sdk/typescript/: vite.config.ts
rooch/sources/: merkle_proof.move  movescription.move  mrc20.move  mrc721.move  util.move
rooch/web/: .env  .gitignore  README.md  jest.config.js  package.json  tsconfig.json  tsconfig.node.json
rooch/web/__tests__/: index.test.js  snapshot.js
rooch/web/libs/: roochnetwork-rooch-sdk-0.0.7.tgz  roochnetwork-rooch-sdk-kit-0.0.7.tgz  roochnetwork-rooch-sdk-kit-0.1.0.tgz
rooch/web/pages/: assets.tsx
rooch/web/src/: App.tsx
rooch/web/typings/: global.d.ts
src/: hash.rs  main.rs
starcoin/: README.md
sui/: .gitignore  Move.toml  README.md
sui/docs/: README.md  SFT交易接口.md  deploy_to_dev_net.md  v3.1_upgrade.md  拓展应用接口.md  接口说明.md  通用接口.md
sui/migrate/: tick_record_ids.txt  tick_record_v2_ids.txt
sui/movecoin/: Move.toml
sui/scripts/: .env.defaults  getTicketRecords.ts  migrate.ts  mint.ts  package.json  testnet_env.sh
sui/sources/: assert_util.move  content_type.move  epoch_bus_factory.move  init.move  market.move  market_event.move  metadata.move  mint_get_factory.move  mint_ratio_50_factory.move  movecoin.move  movescription.move  movescription_to_amm.move  name_factory.move  name_server_factory.move  smartinscription.move  string_util.move  svg.move  tick_factory.move  tick_name.move  type_util.move  util.move
web/: package.json
web/src/: App.tsx
(+53 files in other folders)
