[package]
name = "movescriptions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4.11", features = ["derive", "env"] }
merkletree = { version = "0.23.0" }
fastcrypto = { git = "https://github.com/mystenlabs/fastcrypto", rev = "9579a60fbffe15c0f65626ae55998bf8ef42e193" }